# beautiful-md

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rustfmt.toml  testclean.md  testtest.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
examples/: test.md
scripts/: check.sh  generate_large_test.sh
src/: cli.rs  colors.rs  config.rs  diagnostics.rs  error.rs  formatter.rs  lib.rs  main.rs  preprocessor.rs
src/formatters/: code.rs  heading.rs  list.rs  mod.rs  table.rs
